--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,5 +17,8 @@
     "helmet": "7.0.0",
     "morgan": "1.10.0",
     "pug": "3.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
